# blinker-reader

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: app_state.rs  main.rs
apps/desktop/src-tauri/src/commands/: annotations.rs  library.rs  mod.rs  reader.rs
apps/desktop/ui/: index.html  package.json
apps/desktop/ui/src/: App.tsx  types.ts
apps/desktop/ui/src/pages/: Home.tsx  Reader.tsx
apps/desktop/ui/src/styles/: Home.css  Reader.css  index.css
crates/blinker-core-annot/: Cargo.toml
crates/blinker-core-annot/src/: lib.rs
crates/blinker-core-common/: Cargo.toml
crates/blinker-core-common/src/: error.rs  lib.rs  types.rs
crates/blinker-core-library/: Cargo.toml
crates/blinker-core-library/src/: database.rs  lib.rs  metadata.rs  scanner.rs
crates/blinker-core-render/: Cargo.toml
crates/blinker-core-render/src/: comic.rs  epub.rs  lib.rs  pdf.rs  text.rs
crates/blinker-core-security/: Cargo.toml
crates/blinker-core-security/src/: lib.rs
docs/: ACTION_PLAN.md  ARCHITECTURE.md  PLAN.md  licenses.md
sql/: 001_initial_schema.sql  README.md
tmp_books/: sample.txt
