[workspace]
resolver = "2"
members = [
    "apps/desktop/src-tauri",
    "crates/blinker-core-render",
    "crates/blinker-core-library",
    "crates/blinker-core-annot",
    "crates/blinker-core-security",
    "crates/blinker-core-common",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Blinker Team"]
license = "Apache-2.0"
repository = "https://github.com/yourusername/blinker-reader"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"

# Database
rusqlite = { version = "0.32", features = ["bundled", "backup"] }

# Hashing
blake3 = "1.5"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Tauri
tauri = { version = "1.7", features = ["shell-open"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
