[package]
name = "blinker-core-library"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
blinker-core-common = { path = "../blinker-core-common" }
rusqlite = { workspace = true }
blake3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
