[package]
name = "blinker-core-library"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
blinker-core-common = { path = "../blinker-core-common" }
rusqlite = { workspace = true }
blake3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

# Metadata extraction
# Pin to latest 0.8.x available on crates.io
pdfium-render = { version = "0.8", optional = true }
epub = { version = "2.0", optional = true }

[features]
default = []
pdf-metadata = ["pdfium-render"]
epub-metadata = ["epub"]
